...
        ToolbarItem(placement: .cancellationAction) {
            Button {
                dismiss()
            } label: {
                Image(systemName: "xmark")
            }
            .accessibilityIdentifier("action.message.close")
            .accessibilityLabel(localizationManager.localized("close"))
        }

        ToolbarItemGroup(placement: .topBarTrailing) {
            Button(role: .destructive) {
                if let message = viewModel.message {
...
