...
    "message_severity_critical_hint": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Critical message, please handle it as soon as possible."
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "这是紧急消息，请尽快处理。"
...
